src/test/ui/generic-associated-types/issue-67510-pass.stderr
error[E0038]: the trait `X` cannot be made into an object
  --> $DIR/issue-67510-pass.rs:7:23
   |
LL | fn _func1<'a>(_x: Box<dyn X<Y<'a>=&'a ()>>) {}
   |                       ^^^^^^^^^^^^^^^^^^^ `X` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-67510-pass.rs:4:10
   |
LL | trait X {
   |       - this trait cannot be made into an object...
LL |     type Y<'a>;
   |          ^ ...because it contains the generic associated type `Y`
   = help: consider moving `Y` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
